Login venster sluit na succes

--- a/HomeManager/View/Security/winLogin.xaml
+++ b/HomeManager/View/Security/winLogin.xaml
@@ -99,6 +99,7 @@
                     <Button
                         Margin="3"
                            Command="{Binding cmdLogin}"
+                         CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
                         Padding="5,0,5,0"
                         Content="Inloggen" />
                     <Button
