--- a/HomeManager/View/Personen/ucEmailType.xaml
+++ b/HomeManager/View/Personen/ucEmailType.xaml
@@ -51,7 +51,7 @@
                     <Path
                         Width="20"
                         Height="20"
-                        Data="{StaticResource mySettingButton}"
+                        Data="{StaticResource myPathSetting}"
                         Fill="White"
                         Stretch="Fill" />
                     <TextBlock
