--- a/HomeManager/View/Personen/ucFunctie.xaml
+++ b/HomeManager/View/Personen/ucFunctie.xaml
@@ -1,14 +1,16 @@
-﻿<UserControl x:Class="HomeManager.View.ucFunctie"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:uc="clr-namespace:HomeManager.View"
-             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"             
-             xmlns:local="clr-namespace:HomeManager.View"
-             mc:Ignorable="d" 
-             Background="{StaticResource myBackground}"
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="HomeManager.View.ucFunctie"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:local="clr-namespace:HomeManager.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:HomeManager.View"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Background="{StaticResource myBackground}"
+    mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=FunctieViewModel}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -71,8 +73,7 @@
             Grid.Column="1"
             Width="250"
             ItemsSource="{Binding MijnCollectie}"
-            SelectedItem="{Binding MijnSelectedItem, 
-            Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <TextBlock
             x:Name="Functie"
@@ -85,10 +86,8 @@
             Grid.Row="2"
             Grid.Column="3"
             Margin="5"
-            Text="{Binding MijnSelectedItem.Functie,
-            Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, 
-            ValidatesOnDataErrors=True, NotifyOnValidationError=true, 
-            ValidatesOnExceptions=True}" />
+            Text="{Binding MijnSelectedItem.Functie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}"
+            TextWrapping="Wrap" />
 
         <TextBlock
             x:Name="Omschrijving"
@@ -101,11 +100,9 @@
             Grid.Row="3"
             Grid.Column="3"
             Height="100"
-            TextWrapping="Wrap"
             Margin="5"
-            Text="{Binding MijnSelectedItem.Omschrijving, Mode=TwoWay, 
-            UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, 
-            NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
+            Text="{Binding MijnSelectedItem.Omschrijving, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}"
+            TextWrapping="Wrap" />
 
 
     </Grid>
