--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -99,7 +99,7 @@
                                 BorderThickness="1"
                                 CornerRadius="30">
                                 <Border.Background>
-                                    <ImageBrush ImageSource="{Binding Foto, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
+                                    <ImageBrush ImageSource="{Binding Foto, TargetNullValue='https://p92.com/binaries/content/gallery/p92website/technologies/c-sharp-overview.png'}" Stretch="UniformToFill" />
                                 </Border.Background>
 
                             </Border>
