--- a/HomeManager/View/Personen/ucGemeente.xaml
+++ b/HomeManager/View/Personen/ucGemeente.xaml
@@ -13,35 +13,16 @@
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=GemeenteViewModel}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="250" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+
         <Border
             Grid.Row="0"
-            Grid.ColumnSpan="5"
             Background="{StaticResource myTitleBar}"
             BorderBrush="LightBlue"
-            BorderThickness="1">
+            BorderThickness="2">
             <Grid>
                 <StackPanel
                     Margin="10,0,0,0"
@@ -66,55 +47,87 @@
             </Grid>
         </Border>
 
-        <ListBox
-            Name="UserListView"
-            Grid.Row="2"
-            Grid.RowSpan="11"
-            Grid.Column="1"
-            Width="250"
-            ItemsSource="{Binding MijnCollectie}"
-            SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBlock
-            x:Name="Gemeente"
-            Grid.Row="2"
-            Grid.Column="2"
-            Text="Gemeente"
-            TextAlignment="Right" />
-        <TextBox
-            x:Name="txtGemeente"
-            Grid.Row="2"
-            Grid.Column="3"
-            Margin="5"
-            Text="{Binding MijnSelectedItem.Gemeente, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
+        <Border
+            Grid.Row="1"
+            Grid.Column="0"
+            Margin="3"
+            BorderBrush="Black"
+            BorderThickness="1"
+            CornerRadius="5">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="35" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="50" />
+                </Grid.RowDefinitions>
+                <ListBox
+                    Name="UserListView"
+                    Grid.Row="2"
+                    Grid.RowSpan="7"
+                    Grid.Column="1"
+                    Width="250"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock
+                    x:Name="Gemeente"
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    Margin="5"
+                    Text="Gemeente"
+                    TextAlignment="Right" />
+                <TextBox
+                    x:Name="txtGemeente"
+                    Grid.Row="2"
+                    Grid.Column="3"
+                    Margin="5"
+                    Text="{Binding MijnSelectedItem.Gemeente, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
-        <TextBlock
-            x:Name="PostCode"
-            Grid.Row="3"
-            Grid.Column="2"
-            Text="Porstcode"
-            TextAlignment="Right" />
-        <TextBox
-            x:Name="txtPostalCode"
-            Grid.Row="3"
-            Grid.Column="3"
-            Margin="5"
-            Text="{Binding MijnSelectedItem.PostCode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
+                <TextBlock
+                    x:Name="PostCode"
+                    Grid.Row="3"
+                    Grid.Column="2"
+                    Margin="5"
+                    Text="Porstcode"
+                    TextAlignment="Right" />
+                <TextBox
+                    x:Name="txtPostalCode"
+                    Grid.Row="3"
+                    Grid.Column="3"
+                    Margin="5"
+                    Text="{Binding MijnSelectedItem.PostCode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
-        <TextBlock
-            x:Name="Provincie"
-            Grid.Row="4"
-            Grid.Column="2"
-            Text="Provincie"
-            TextAlignment="Right" />
-        <ComboBox
-            x:Name="cboLand"
-            Grid.Row="4"
-            Grid.Column="3"
-            Margin="5"
-            DataContext="{Binding Source={StaticResource VML}, Path=ProvincieViewModel}"
-            DisplayMemberPath="ProvincieDisplayName"
-            ItemsSource="{Binding MijnCollectie}"
-            SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.ProvincieID, Mode=TwoWay}"
-            SelectedValuePath="ProvincieID" />
+                <TextBlock
+                    x:Name="Provincie"
+                    Grid.Row="4"
+                    Grid.Column="2"
+                    Margin="5"
+                    Text="Provincie"
+                    TextAlignment="Right" />
+                <ComboBox
+                    x:Name="cboLand"
+                    Grid.Row="4"
+                    Grid.Column="3"
+                    Margin="5"
+                    DataContext="{Binding Source={StaticResource VML}, Path=ProvincieViewModel}"
+                    DisplayMemberPath="ProvincieDisplayName"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.ProvincieID, Mode=TwoWay}"
+                    SelectedValuePath="ProvincieID" />
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
