--- a/HomeManager/View/Personen/ucLand.xaml
+++ b/HomeManager/View/Personen/ucLand.xaml
@@ -8,33 +8,14 @@
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="350"
+    d:DesignWidth="600"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
 
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=LandViewModel}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="250" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -43,7 +24,7 @@
             Grid.ColumnSpan="5"
             Background="{StaticResource myTitleBar}"
             BorderBrush="LightBlue"
-            BorderThickness="1">
+            BorderThickness="2">
             <Grid>
                 <StackPanel
                     Margin="10,0,0,0"
@@ -68,109 +49,138 @@
             </Grid>
         </Border>
 
-        <ListBox
-            Name="UserListView"
-            Grid.Row="2"
-            Grid.RowSpan="11"
-            Grid.Column="1"
-            Width="250"
-            ItemsSource="{Binding MijnCollectie}"
-            SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Border
-                        Width="205"
-                        Margin="5"
-                        Padding="2"
-                        Background="LightGray"
-                        BorderBrush="Gray"
-                        BorderThickness="1"
-                        CornerRadius="8">
-                        <StackPanel Orientation="Horizontal">
-
+        <Border
+            Grid.Row="1"
+            Grid.Column="0"
+            Margin="3"
+            BorderBrush="Black"
+            BorderThickness="1"
+            CornerRadius="5">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="150" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="35" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="50" />
+                </Grid.RowDefinitions>
+                <ListBox
+                    Name="UserListView"
+                    Grid.Row="2"
+                    Grid.RowSpan="7"
+                    Grid.Column="1"
+                    Width="250"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
                             <Border
-                                Width="60"
-                                Height="60"
-                                HorizontalAlignment="Left"
+                                Width="205"
+                                Margin="5"
+                                Padding="2"
+                                Background="LightGray"
                                 BorderBrush="Gray"
                                 BorderThickness="1"
-                                CornerRadius="30">
-                                <Border.Background>
-                                    <ImageBrush ImageSource="{Binding Vlag, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
-                                </Border.Background>
+                                CornerRadius="8">
+                                <StackPanel Orientation="Horizontal">
 
+                                    <Border
+                                        Width="60"
+                                        Height="60"
+                                        HorizontalAlignment="Left"
+                                        BorderBrush="Gray"
+                                        BorderThickness="1"
+                                        CornerRadius="30">
+                                        <Border.Background>
+                                            <ImageBrush ImageSource="{Binding Vlag, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
+                                        </Border.Background>
+
+                                    </Border>
+
+
+                                    <StackPanel Margin="10,0,0,0" Orientation="Vertical">
+                                        <TextBlock
+                                            Margin="0,5,0,8"
+                                            FontWeight="Bold"
+                                            Text="{Binding Land}" />
+                                        <TextBlock Margin="0,8,0,0" Text="{Binding LandCode}" />
+                                    </StackPanel>
+                                </StackPanel>
                             </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
 
+                <TextBlock
+                    x:Name="Land"
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    Text="Land"
+                    TextAlignment="Right" />
+                <TextBox
+                    x:Name="txtLand"
+                    Grid.Row="2"
+                    Grid.Column="3"
+                    Margin="5"
+                    Text="{Binding MijnSelectedItem.Land, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
-                            <StackPanel Margin="10,0,0,0" Orientation="Vertical">
-                                <TextBlock
-                                    Margin="0,5,0,8"
-                                    FontWeight="Bold"
-                                    Text="{Binding Land}" />
-                                <TextBlock Margin="0,8,0,0" Text="{Binding LandCode}" />
-                            </StackPanel>
-                        </StackPanel>
+                <TextBlock
+                    x:Name="LandCode"
+                    Grid.Row="3"
+                    Grid.Column="2"
+                    Text="Landcode"
+                    TextAlignment="Right" />
+                <TextBox
+                    x:Name="txtLandCode"
+                    Grid.Row="3"
+                    Grid.Column="3"
+                    Margin="5"
+                    Text="{Binding MijnSelectedItem.LandCode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
+
+                <TextBlock
+                    x:Name="Vlag"
+                    Grid.Row="4"
+                    Grid.RowSpan="5"
+                    Grid.Column="2"
+                    Margin="5,12,5,199"
+                    Text="Vlag"
+                    TextAlignment="Right" />
+                <StackPanel
+                    Grid.Row="4"
+                    Grid.Column="3"
+                    Orientation="Horizontal">
+                    <Border
+                        Width="50"
+                        Height="50"
+                        Margin="3,0,0,0"
+                        HorizontalAlignment="Left"
+                        BorderBrush="Gray"
+                        BorderThickness="1"
+                        CornerRadius="35">
+                        <Border.Background>
+                            <ImageBrush ImageSource="{Binding MijnSelectedItem.Vlag, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
+                        </Border.Background>
                     </Border>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-
-        <TextBlock
-            x:Name="Land"
-            Grid.Row="2"
-            Grid.Column="2"
-            Text="Land"
-            TextAlignment="Right" />
-        <TextBox
-            x:Name="txtLand"
-            Grid.Row="2"
-            Grid.Column="3"
-            Margin="5"
-            Text="{Binding MijnSelectedItem.Land, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
-
-        <TextBlock
-            x:Name="LandCode"
-            Grid.Row="3"
-            Grid.Column="2"
-            Text="Landcode"
-            TextAlignment="Right" />
-        <TextBox
-            x:Name="txtLandCode"
-            Grid.Row="3"
-            Grid.Column="3"
-            Margin="5"
-            Text="{Binding MijnSelectedItem.LandCode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
-
-        <TextBlock
-            x:Name="Vlag"
-            Grid.Row="4"
-            Grid.Column="2"
-            Margin="0,19,0,10"
-            Text="Vlag"
-            TextAlignment="Right" />
-        <StackPanel
-            Grid.Row="4"
-            Grid.Column="3"
-            Orientation="Horizontal">
-            <Border
-                Width="75"
-                Height="75"
-                Margin="3,0,0,0"
-                HorizontalAlignment="Left"
-                BorderBrush="Gray"
-                BorderThickness="1"
-                CornerRadius="35">
-                <Border.Background>
-                    <ImageBrush ImageSource="{Binding MijnSelectedItem.Vlag, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
-                </Border.Background>
-            </Border>
-        </StackPanel>
-        <Button
-            Grid.Row="4"
-            Grid.Column="4"
-            Margin="-85,0,0,0"
-            Command="{Binding cmdUploadPicture}"
-            Style="{StaticResource UploadVlagButton}" />
-
+                </StackPanel>
+                <Button
+                    Grid.Row="4"
+                    Grid.Column="4"
+                    Margin="0,9,39,10"
+                    Command="{Binding cmdUploadPicture}"
+                    Style="{StaticResource UploadVlagButton}" />
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
