--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -5,16 +5,23 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:uc="clr-namespace:HomeManager.View"
+    xmlns:VM="clr-namespace:HomeManager.ViewModel"
+    xmlns:V="clr-namespace:HomeManager.View"
+    xmlns:viewModel="clr-namespace:HomeManager.ViewModel"
     Title="MainWindow"
     Width="1000"
     Height="900"
     Background="{StaticResource myTitleBar}"
     mc:Ignorable="d">
-
+    <Window.DataContext>
+        <viewModel:clsHomeVM />
+    </Window.DataContext>
 
 
     <Window.Resources>
+        <DataTemplate DataType="{x:Type VM:clsCollectiesVM}">
+            <V:ucCollecties />
+        </DataTemplate>
 
         <Storyboard x:Key="ShowMenu">
             <DoubleAnimation
@@ -49,7 +56,7 @@
         </Grid.ColumnDefinitions>
 
 
-        <uc:ucTitlePerson
+        <V:ucTitlePerson
             Grid.ColumnSpan="2"
             Margin="0,0,10,0"
             HorizontalAlignment="Right"
@@ -122,7 +129,11 @@
                     <Expander Style="{StaticResource myHamburgerTodo}">
 
                         <StackPanel x:Name="stckTodo">
-                            <Button Content="Todo Collectie" Style="{StaticResource myMenuTandwiel}" />
+                            <Button 
+                                Content="Todo Collectie"
+                                Command="{Binding NavCommand}"
+                                CommandParameter="clsCollectiesVM"
+                                Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Todo Categoriën" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Todo Kleuren" Style="{StaticResource myMenuTandwiel}" />
                         </StackPanel>
@@ -171,6 +182,9 @@
             Unchecked="ToggleButton_Unchecked" />
 
         <!--#endregion-->
-
+        <ContentControl
+            Grid.Row="1"
+            Grid.Column="1"
+            Content="{Binding CurrentViewModel}" />
     </Grid>
 </Window>
